# greentic-interfaces

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  build.rs  greentic:component@0.4.0.wasm  mcp-secrets.html  mcp-secrets.md
.cargo/: config.toml
.codex/: GI-PR-01.md  GI-PR-02.md  GLOBAL_RULES.md  MECHANISM.md  PR-00-VISION.md  PR-01-DEPRECATION-SIGNALS.md  PR-01-wit-upgrade-to-update.md  PR-02-DOCS-SWEEP.md  PR-02.md  PR-04.md  PR-06.md  PR-07.md  PR-09.md  PR-10.md  PR-12.md  PR-B.md  PR-IF-01.md  STATE.json  StatePR-01.md  repo_overview.md
.github/: dependabot.yml
ci/: check_no_duplicate_canonical_wit.sh  local_check.sh
crates/greentic-interfaces/: Cargo.toml  README.md  build.rs
crates/greentic-interfaces-guest/: Cargo.toml  build.rs
crates/greentic-interfaces-guest/build_support/: wit_paths.rs
crates/greentic-interfaces-guest/src/: distributor_api_imports.rs  lib.rs
crates/greentic-interfaces-guest/tests/: distributor_api_imports.rs  distributor_api_imports_v1_1.rs
crates/greentic-interfaces-guest/tests/trybuild/: component_v060_export.rs
crates/greentic-interfaces-guest/wit/greentic/component@0.6.0/: package.wit
crates/greentic-interfaces-guest/wit/greentic/distributor@1.0.0/: package.wit
crates/greentic-interfaces-guest/wit/greentic/metadata@1.0.0/: package.wit
crates/greentic-interfaces-guest/wit/greentic/provider/schema-core@1.0.0/: package.wit
crates/greentic-interfaces-guest/wit/greentic/secrets-generators@0.1.0/: package.wit
crates/greentic-interfaces-guest/wit/greentic/secrets-policy-validator@0.1.0/: package.wit
crates/greentic-interfaces-host/: Cargo.toml
crates/greentic-interfaces-host/src/: lib.rs
crates/greentic-interfaces-host/tests/: component_v0_6_bindings.rs  worker_host_glue.rs
crates/greentic-interfaces-wasmtime/: Cargo.toml  README.md  build.rs
crates/greentic-interfaces-wasmtime/build_support/: wit_paths.rs
crates/greentic-interfaces-wasmtime/src/: engine.rs  errors.rs  lib.rs  linker.rs  mappers.rs
crates/greentic-interfaces-wasmtime/src/host_helpers/: mod.rs  secrets_store.rs
crates/greentic-interfaces-wasmtime/src/host_helpers/v1/: http_client.rs  messaging_session.rs  mod.rs  secrets_store.rs
crates/greentic-interfaces-wasmtime/tests/: distributor_api.rs  host_helpers_compile.rs  secrets_store_linker.rs  smoke.rs
crates/greentic-interfaces-wasmtime/wit/greentic/component@0.4.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/component@0.5.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/distributor@1.0.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/events@1.0.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/host-import@0.2.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/host-import@0.4.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/host-import@0.6.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/messaging-session@1.0.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/oauth@0.1.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/pack@0.6.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/secrets-audit-exporter@0.1.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/secrets-generators@0.1.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/secrets-policy-validator@0.1.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/secrets-store@1.0.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/greentic/state-store@1.0.0/: package.wit
crates/greentic-interfaces-wasmtime/wit/provider-common/: world.wit
crates/greentic-interfaces/build_support/: wit_paths.rs
crates/greentic-interfaces/src/: bindings.rs  component_v0_4.rs  host_import_v0_2.rs  host_import_v0_4.rs  lib.rs  mappers.rs  pack_export_v0_4.rs  types_core_v0_4.rs  wit_all.rs
crates/greentic-interfaces/tests/: mapping_roundtrip.rs  mcp_wit.rs  oauth_broker_client_roundtrip.rs  wit_build.rs
crates/greentic-interfaces/wit/: host_imports.wit  types.wit
crates/greentic-interfaces/wit/greentic/common-types@0.1.0/: package.wit
crates/greentic-interfaces/wit/greentic/component@0.6.0/: package.wit
crates/greentic-interfaces/wit/greentic/deploy-plan@1.0.0/: package.wit
crates/greentic-interfaces/wit/greentic/events-bridge@1.0.0/: package.wit
crates/greentic-interfaces/wit/greentic/events-emitter@1.0.0/: package.wit
crates/greentic-interfaces/wit/greentic/events@1.0.0/: package.wit
crates/greentic-interfaces/wit/greentic/host-import@0.6.0/: package.wit
crates/greentic-interfaces/wit/greentic/host@1.0.0/: package.wit
crates/greentic-interfaces/wit/greentic/lifecycle@1.0.0/: package.wit
crates/greentic-interfaces/wit/greentic/messaging-session@1.0.0/: package.wit
crates/greentic-interfaces/wit/greentic/oauth-broker@1.0.0/: package.wit
crates/greentic-interfaces/wit/greentic/pack-export@0.2.0/: package.wit
crates/greentic-interfaces/wit/greentic/pack-export@0.4.0/: package.wit
crates/greentic-interfaces/wit/greentic/secrets-audit-exporter@0.1.0/: package.wit
crates/greentic-interfaces/wit/greentic/secrets-provider@0.1.0/: package.wit
crates/greentic-interfaces/wit/greentic/secrets@0.1.0/: package.wit
crates/greentic-interfaces/wit/greentic/types-core@0.2.0/: package.wit
crates/greentic-interfaces/wit/greentic/types-core@0.4.0/: package.wit
docs/: DISCOVERY_COMPONENT_INVOKE.md  README.md  component-descriptor.md  component_state.md  events-wit.md  interfaces_inventory.md  (+7 more)
examples/runner-host-smoke/: Cargo.toml
examples/runner-host-smoke/src/: main.rs
guest-tests/repo-ui-actions-dummy/: Cargo.toml
guest-tests/repo-ui-actions-dummy/src/: lib.rs
guest-tests/repo-ui-actions-dummy/wit/greentic/component@0.4.0/: package.wit
guest-tests/repo-ui-actions-dummy/wit/greentic/metadata@1.0.0/: package.wit
guest-tests/repo-ui-actions-dummy/wit/greentic/pack-export@0.2.0/: package.wit
guest-tests/repo-ui-actions-dummy/wit/greentic/types-core@0.4.0/: package.wit
(+87 files in other folders)
