[package]
name = "greentic-interfaces-guest"
version.workspace = true
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-interfaces"
description = "Guest-facing bindings for Greentic components targeting wasm32-wasip2"
documentation = "https://docs.rs/greentic-interfaces-guest"
homepage = "https://github.com/greentic-ai/greentic-interfaces"

[dependencies]
greentic-types = { workspace = true }
greentic-interfaces = { workspace = true, optional = true, default-features = false, features = ["bindings-rust"] }
wit-bindgen = { version = "0.48" }

[features]
guest = []
host-bridge = ["greentic-interfaces"]
default = ["guest"]

[build-dependencies]
wit-bindgen-core = "0.48"
wit-bindgen-rust = "0.48"
