[package]
name = "greentic-interfaces-guest"
version.workspace = true
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-interfaces"
description = "Guest-facing bindings for Greentic components targeting wasm32-wasip2"
documentation = "https://docs.rs/greentic-interfaces-guest"
homepage = "https://github.com/greentic-ai/greentic-interfaces"

[dependencies]
greentic-types = { workspace = true }
greentic-interfaces = { workspace = true, optional = true, default-features = false, features = ["bindings-rust"] }
wit-bindgen = { version = "0.48" }

[features]
component-node = []
component-node-v0-4 = []
component-v1 = ["greentic-interfaces"]
lifecycle = []
build = []
events-sink = []
events-source = []
events = ["events-sink", "events-source"]
events-bridge = []
secrets = []
state-store = []
messaging = []
http-client = []
telemetry = []
oauth-broker = []
worker = []
repo = []
scan = []
signing = []
attestation = []
policy = []
metadata = []
oci = []
distribution = []
distributor-api = []
distributor-api-imports = ["distributor-api"]
gui-fragment = []
deploy-plan = []
repo-ui-actions = []
pack-export = []
pack-export-v1 = ["greentic-interfaces"]
common-types = []
runner = []
types-core = []
wasix-mcp-24-11-05-guest = []
wasix-mcp-25-03-26-guest = []
wasix-mcp-25-06-18-guest = []
guest = [
    "component-node",
    "component-v1",
    "common-types",
    "lifecycle",
    "build",
    "events",
    "events-bridge",
    "secrets",
    "state-store",
    "messaging",
    "http-client",
    "telemetry",
    "oauth-broker",
    "worker",
    "repo",
    "scan",
    "signing",
    "attestation",
    "policy",
    "metadata",
    "oci",
    "distributor-api",
    "distributor-api-imports",
    "distribution",
    "deploy-plan",
    "repo-ui-actions",
    "pack-export",
    "pack-export-v1",
    "runner",
    "types-core",
    "wasix-mcp-24-11-05-guest",
    "wasix-mcp-25-03-26-guest",
    "wasix-mcp-25-06-18-guest",
]
host-bridge = ["greentic-interfaces"]
default = ["guest"]

[build-dependencies]
wit-bindgen-core = "0.48"
wit-bindgen-rust = "0.48"
