[package]
name = "greentic-interfaces-wasmtime"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Wasmtime glue for greentic-interfaces WIT packages (host/linker adapters + zero-copy type mappers)."
repository = "https://github.com/greentic-ai/greentic-interfaces"
readme = "README.md"

[features]
default = ["stable-wasmtime", "host-secrets", "host-telemetry", "host-clock"]
stable-wasmtime = []
nightly-wasmtime = []
host-secrets = []
host-telemetry = []
host-clock = []
host-fs = []

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
either = "1"
once_cell = "1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
wasmtime = { version = "28.0.1", default-features = true, features = ["component-model"] }
wit-bindgen = "0.47"
greentic-types = "0.1"
greentic-interfaces = { version = "0.4.3", path = "../greentic-interfaces" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"
