[package]
name = "greentic-interfaces-wasmtime"
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-interfaces-wasmtime"
description = "Wasmtime host & guest shims for greentic WIT worlds (sync; auto-discovered)"

[features]
default = []
control-helpers = []

[dependencies]
anyhow = "1"
greentic-interfaces = { version = "0.4", default-features = false }

[dependencies.wasmtime]
version = ">=18, <38"
default-features = false
features = ["component-model"]

[build-dependencies]
camino = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
walkdir = "2"
