[package]
name = "greentic-interfaces-wasmtime"
version.workspace = true
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-interfaces-wasmtime"
description = "Wasmtime host & guest shims for greentic WIT worlds (sync; auto-discovered)"

[features]
default = []
control-helpers = []

[dependencies]
anyhow = "1"
greentic-interfaces = { workspace = true }

[dependencies.wasmtime]
workspace = true

[build-dependencies]
camino = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
walkdir = "2"

[dev-dependencies]
wat = "1"
wasmtime-wasi = { workspace = true }
