[package]
name = "greentic-interfaces"
version.workspace = true
edition = "2024"
rust-version = "1.88"
build = "build.rs"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-interfaces"
description = "Greentic ABI: WIT contracts, generated bindings, thin mappers"
readme = "README.md"
documentation = "https://docs.rs/greentic-interfaces"
keywords = ["greentic", "wit", "wasm", "component"]
categories = ["wasm", "api-bindings"]

[features]
default = [
    "bindings-rust",
    "component-v0-4",
    "pack-export-v0-4",
    "types-core-v0-4",
    "host-import-v0-6",
    "host-import-v0-4",
    "host-import-v0-2",
    "pack-export-v0-2",
    "types-core-v0-2",
    "secrets-v0-1",
    "wasix-mcp-v0-0-5",
    "oauth-v0-1",
    "secrets-store-v1",
    "state-store-v1",
    "messaging-session-v1",
    "events-broker-v1",
    "events-source-v1",
    "events-sink-v1",
    "events-emitter-v1",
    "events-bridge-v1",
    "http-client-v1",
    "telemetry-logger-v1",
    "oauth-broker-v1",
]
bindings-rust = ["dep:wit-bindgen"]
component-v0-4 = []
describe-v1 = []
pack-export-v0-4 = []
types-core-v0-4 = []
host-import-v0-6 = []
host-import-v0-4 = []
host-import-v0-2 = []
runner-host-v1 = []
pack-export-v0-2 = []
types-core-v0-2 = []
secrets-v0-1 = []
wasix-mcp-v0-0-5 = []
oauth-v0-1 = []
oauth-broker-v1 = []
component-lifecycle-v1 = []
events-v1 = []
events-broker-v1 = []
events-source-v1 = []
events-sink-v1 = []
host-import-compat = ["host-import-v0-6", "host-import-v0-4", "host-import-v0-2"]
secrets-store-v1 = []
state-store-v1 = []
messaging-session-v1 = []
events-emitter-v1 = []
events-bridge-v1 = []
http-client-v1 = []
telemetry-logger-v1 = []
wit-all = [
    "bindings-rust",
    "component-v0-4",
    "describe-v1",
    "pack-export-v0-4",
    "types-core-v0-4",
    "host-import-v0-6",
    "host-import-v0-4",
    "host-import-v0-2",
    "runner-host-v1",
    "pack-export-v0-2",
    "types-core-v0-2",
    "secrets-v0-1",
    "component-lifecycle-v1",
    "events-v1",
    "events-broker-v1",
    "events-source-v1",
    "events-sink-v1",
    "wasix-mcp-v0-0-5",
    "oauth-v0-1",
    "secrets-store-v1",
    "state-store-v1",
    "messaging-session-v1",
    "events-emitter-v1",
    "events-bridge-v1",
    "http-client-v1",
    "telemetry-logger-v1",
    "oauth-broker-v1",
]
schema = ["dep:schemars", "greentic-types/schemars"]

[dependencies]
greentic-types = { workspace = true }
semver = "1"
time = "0.3"
serde = { workspace = true, optional = true }
schemars = { version = "1", features = ["derive"], optional = true }
wit-bindgen = { version = "0.47", optional = true }
anyhow = "1"
thiserror = "2"

[build-dependencies]
wit-bindgen-core = "0.47"
wit-bindgen-rust = "0.47"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = { version = "38", default-features = false, features = ["component-model", "cranelift", "runtime", "std"] }

[dev-dependencies]
serde_json = { workspace = true }
insta = { version = "1", features = ["json"] }
wit-parser = "0.240"
