[package]
name = "runner-host-smoke"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
greentic-interfaces = { workspace = true, features = ["runner-host-v1"] }
greentic-interfaces-wasmtime = { workspace = true }
serde_json = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
