[package]
name = "runner-host-smoke"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
greentic-interfaces = { path = "../../crates/greentic-interfaces", version = "0.4", features = ["runner-host-v1"], default-features = false }
greentic-interfaces-wasmtime = { path = "../../crates/greentic-interfaces-wasmtime", version = "0.4", default-features = false }
serde_json = "1"
wasmtime = { version = "39", default-features = false, features = ["component-model", "cranelift", "runtime", "std"] }
wasmtime-wasi = "40"
