[package]
name = "runner-host-smoke"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
greentic-interfaces = { workspace = true, features = ["runner-host-v1"], default-features = false }
greentic-interfaces-wasmtime = { workspace = true, default-features = false }
serde_json = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
