[package]
name = "repo-ui-actions-dummy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wit-bindgen = { version = "0.51", default-features = false, features = ["macros"] }
wit-bindgen-rt = "0.44"

[package.metadata.component]
package = "greentic:repo-ui-actions"

[package.metadata.component.target]
path = "wit"
world = "repo-ui-worker"

[package.metadata.component.target.dependencies]

[lib]
crate-type = ["cdylib"]
